tests/executionspec/snapshots/execution_spec__undeclared-type-no-base-url.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "Undeclared type 'User' was found",
    "trace": [
      "Query",
      "users"
    ],
    "description": null
  },
  {
    "message": "No base URL defined",
    "trace": [
      "Query",
      "users",
      "@http"
    ],
    "description": null
  }
]
